# invenio-drafts-resources

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  Pipfile  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_drafts_resources/: __init__.py  config.py  errors.py  ext.py  links.py  resource_unit.py  resource_units.py  serializers.py  version.py
invenio_drafts_resources/drafts/: __init__.py  api.py  models.py
invenio_drafts_resources/records/: __init__.py  api.py  models.py
invenio_drafts_resources/records/systemfields/: __init__.py  parent.py  versions.py
invenio_drafts_resources/resources/: __init__.py  deposit.py  draft.py  draft_config.py  draft_file.py  file.py  file_config.py  record.py  userrecords.py  userrecords_config.py
invenio_drafts_resources/resources/drafts/: __init__.py  config.py  errors.py  resource.py  schema.py  schemas_links.py
invenio_drafts_resources/resources/files/: __init__.py  config.py  resource.py
invenio_drafts_resources/resources/records/: __init__.py  args.py  config.py  errors.py  resource.py  schema.py  schemas_links.py  schemas_url_args.py
invenio_drafts_resources/serializers/: __init__.py  json.py
invenio_drafts_resources/serializers/schemas/: __init__.py  json.py
invenio_drafts_resources/service/: __init__.py  permission.py  service.py
invenio_drafts_resources/service/schemas/: __init__.py
invenio_drafts_resources/services/: __init__.py  components.py  draft.py  draft_file_metadata.py  draft_file_service.py  draft_service.py  draft_version.py  draft_version_service.py  minter.py  permissions.py  pid_manager.py  search.py
invenio_drafts_resources/services/files/: __init__.py  config.py  service.py
invenio_drafts_resources/services/records/: __init__.py  components.py  config.py  permissions.py  results.py  schema.py  search.py  search_params.py  service.py  tasks.py  uow.py
invenio_drafts_resources/services/records/components/: __init__.py  base.py  files.py  files_base.py  media_files.py  metadata.py  pid.py  relations.py
invenio_drafts_resources/services/schemas/: __init__.py  json.py
invenio_drafts_resources/translations/: messages.pot
invenio_drafts_resources/translations/af/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/ar/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/bg/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/ca/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/cs/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/da/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/de/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/de_AT/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/de_DE/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/el/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/en/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/en_AT/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/en_HU/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/es/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/es_CU/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/es_MX/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/et/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/et_EE/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/fa/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/fr/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/gl/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/hr/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/hu/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_drafts_resources/translations/it/LC_MESSAGES/: messages.po
tests/: conftest.py  test_deposit_resource.py  test_draft_resource.py  test_draft_service.py  test_draft_service_links.py  test_file_resource.py
tests/mock_module/: __init__.py  api.py  models.py  permissions.py  resource.py  schemas.py  service.py
tests/mock_module/jsonschemas/: __init__.py
tests/mock_module/mappings/: __init__.py
tests/records/: conftest.py  test_api.py
tests/resources/: conftest.py  test_files_resource.py  test_record_resource.py  test_resource_links.py
tests/services/: __init__.py  conftest.py  test_record_service.py  test_record_service_files.py  test_record_service_search.py  test_record_service_tasks.py  test_records_uow.py  test_services.py  utils.py
(+28 files in other folders)
