# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2024 CERN.
# Copyright (C) 2020 Northwestern University.
# Copyright (C) 2022-2024 Graz University of Technology.
#
# Invenio-Drafts-Resources is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-drafts-resources
version = attr: invenio_drafts_resources.__version__
description = Invenio Drafts Resources module to create REST APIs
long_description = file: README.rst, CHANGES.rst
keywords = invenio records deposit submit versioning drafts
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/Invenio-Drafts-Resources
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-i18n>=3.0.0,<4.0.0
    invenio-records-resources>=7.0.0,<8.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=3.0.0,<4.0.0
    invenio-app>=2.0.0,<3.0.0
    Sphinx>=4.5.0
    invenio-db[mysql,postgresql]>=2.0.0,<3.0.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0

[options.entry_points]
invenio_i18n.translations =
    messages = invenio_drafts_resources
invenio_db.models =
    invenio_drafts_resources = invenio_drafts_resources.records.models
invenio_celery.tasks =
    invenio_drafts_resources = invenio_drafts_resources.services.records.tasks

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_drafts_resources/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_drafts_resources/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_drafts_resources/translations/messages.pot
output-dir = invenio_drafts_resources/translations/

[update_catalog]
input-file = invenio_drafts_resources/translations/messages.pot
output-dir = invenio_drafts_resources/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_drafts_resources --cov-report=term-missing
testpaths = docs tests invenio_drafts_resources
